--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
       "NODE_ENV": "development",
       "PORT": 4000
     }
+  },
+  "devDependencies": {
+    "mocha": "^10.0.0",
+    "should": "^13.2.3",
+    "sinon": "^14.0.0",
+    "supertest": "^6.2.3"
   }
 }
